--- a/src/scss/quiz.scss
+++ b/src/scss/quiz.scss
@@ -17,12 +17,12 @@
         width: 350px;
         height: 450px;
         background-color: #f7f7f7;
-        color: black;
+        // color: black;
         text-align: center;
         border-radius: 10px;
         overflow: hidden;
         .champion-cup {
-          color: rgb(7, 7, 7);
+          // color: rgb(7, 7, 7);
           img {
             width: 150px;
             transform: rotate(32deg);
@@ -33,6 +33,7 @@
           color: rgb(7, 7, 7);
           h4 {
             color: rgb(61, 61, 61);
+            // color: rgb(246, 57, 57);
           }
           h2 {
             // color: green;
@@ -50,17 +51,23 @@
               border-radius: 8px;
               //   background-color: blue;
               border: 1px solid gray;
+              overflow: hidden;
 
               .progress-dynamic {
-                width: 20%;
+                width: 0%;
                 height: 6px;
-                border-radius: 8px;
-                background-color: red;
+                // border-radius: 7px;
+                border-top-right-radius: 8px;
+                border-bottom-right-radius: 8px;
+                // background-color: red;
                 border: 1px solid transparent;
               }
             }
             .progress-percentage {
-              color: black;
+              // color: black;
+              color: gray;
+              font-weight: 600;
+              padding-left: 3px;
             }
           }
           h6 {
@@ -145,11 +152,21 @@
             }
           }
           .quiz-time {
-            color: rgba(138, 43, 226, 0.7);
-            font-size: 18px;
-            font-weight: 600;
+            width: 60px;
+            padding: 0px 2px;
+            // background-color:red;
+            p {
+              // color: rgba(109, 107, 2, 0.7);
+              font-size: 18px;
+              font-weight: 600;
 
-            // color: black;
+              // color: black;
+              .counttime {
+                // display: none;
+                display: inline-block;
+                // padding: 1px;
+              }
+            }
           }
         }
         &--body {
@@ -183,10 +200,12 @@
               &__li {
                 display: flex;
                 align-items: center;
-                box-shadow: 0px 0px 5px 0px rgb(190, 182, 182);
+                // box-shadow: 0px 0px 6px 0px rgb(190, 182, 182);
+                box-shadow: 0px 0px 6px 0px rgb(192, 192, 192);
                 padding: 20px;
                 border-radius: 8px;
                 margin: 8px 8px;
+                transition: all 0.2s ease-in;
                 // margin-right: 8px;
                 cursor: pointer;
                 .ans-list--a,
@@ -214,6 +233,9 @@
                   color: gray;
                 }
                 // background-color: white;
+              }
+              &__li:hover {
+                box-shadow: 0px 0px 8px 0px rgb(148, 147, 147);
               }
             }
           }
