--- a/src/scss/quiz.scss
+++ b/src/scss/quiz.scss
@@ -333,7 +333,7 @@
           }
         }
         .restart {
-          margin-top: 10px;
+          margin-top: 40px !important;
           &-btn {
             padding: 10px;
 
